# rag-lab

./: .dockerignore  .env.example  .env.local.example  .gcloudignore  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.test  README.md  ROADMAP.md  cloudbuild.test.yaml  cloudbuild.yaml  docker-compose.README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-base.txt  requirements-optional.txt  requirements.txt
.github/: copilot-instructions.md
deployment/: .env.deploy.example  .env.template  .gitignore  CLOUDBUILD_SETUP.md  MONITORING.md  README.md  README.old.md  deploy-cloudrun.sh  deploy_cloudrun.py  local-run.sh  local_run.py  monitor-build.sh  setup-cloudbuild-trigger.sh  setup-infrastructure.sh  setup_infrastructure.py  teardown.py  teardown.sh  test-deployment.sh  upload-secrets.sh  watch-build.sh
docs/: api.md  authentication.md  cloudbuild-setup.md  dependencies.md  deployment.md  development.md  file-validation.md  hybrid-search.md  reranking.md  testing.md
scripts/: README.md  get_user_token.py  query_billing.py
src/: __init__.py  auth.py  database.py  document_processor.py  file_validator.py  logging_config.py  main.py  storage.py  utils.py
src/bm25/: __init__.py  fusion.py  index_builder.py  llm_extraction.py  scorer.py  stemmer.py  tokenizer.py
src/reranking/: __init__.py  base.py  cohere.py  factory.py  gemini.py  local.py
tests/: README.md  TESTING_RERANKING.md  auth_manager.py  conftest.py
tests/e2e/: README.md  test_full_rag_workflow.py
tests/integration/: conftest.py  test_chunking_integrity.py  test_gemini_reranker.py  test_hybrid_storage.py  (+2 more)
(+35 files in other folders)
