[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-lab"
version = "0.2.0"
description = "RAG-as-a-Service API with Vertex AI embeddings and PostgreSQL vector storage"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Rostislav Dublin"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "google-cloud-storage>=2.10.0",
    "google-cloud-aiplatform>=1.38.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.2.7",
    "pymupdf_layout>=1.26.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Add the project root to Python path for tests
pythonpath = ["."]
# Filter out SWIG deprecation warnings from PyMuPDF C extensions
filterwarnings = [
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]
# Test markers for selective test execution
markers = [
    "integration: Integration tests requiring real cloud services (GCP credentials, Vertex AI)",
    "e2e: End-to-end tests requiring running server and full infrastructure",
]

[tool.setuptools]
packages = ["src"]
